[gd_scene load_steps=11 format=4 uid="uid://c2ed1njuka755"]

[ext_resource type="Texture2D" uid="uid://77ncewh32qt6" path="res://Assets/Styloo Guns Asset Pack GLTF FBX/GLB/bullet1_bulletmat_color.png" id="1_3do2w"]
[ext_resource type="Script" uid="uid://by4pqhuddkua1" path="res://Scripts/bullet.gd" id="1_c43nw"]
[ext_resource type="Texture2D" uid="uid://dei3vpu5ctkfd" path="res://Assets/Styloo Guns Asset Pack GLTF FBX/GLB/bullet1_bulletmat_normal.png" id="2_w6mxq"]
[ext_resource type="AudioStream" uid="uid://5qopj4ic0xcp" path="res://Assets/Snake's Authentic Gun Sounds/Isolated/7.62x54R/WAV/762x54r Single Isolated WAV.wav" id="4_7lf3a"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6buc5"]
resource_name = "bulletmat"
cull_mode = 2
albedo_texture = ExtResource("1_3do2w")
metallic = 0.75
metallic_specular = 0.62
roughness = 0.29
emission_enabled = true
emission = Color(0.611634, 0.611634, 5.77569e-07, 1)
emission_energy_multiplier = 16.0
normal_enabled = true
normal_texture = ExtResource("2_w6mxq")
ao_light_affect = 1.0
refraction_scale = 1.0
grow_amount = 0.65

[sub_resource type="ArrayMesh" id="ArrayMesh_soojt"]
_surfaces = [{
"aabb": AABB(-0.00374031, -0.00835017, -0.00374033, 0.00748066, 0.0267822, 0.00748066),
"format": 34896613377,
"index_count": 474,
"index_data": PackedByteArray("SwAwAC4AJQANAAsATAAhADAATQAkACEATgAmACQAKQAmAE4ALAApAE8AQgBBADEALQAqAEIARQAiAC8ARgAjACIARwAlACMASAAnACUAJwBIAEkAKAAsAFAAQwBEAC8AQQBQAEAAUABPAD8ASAA4ADkASQA5ADoABgAAAAQASgA6ADsARABDADMAQwBCADIARQBEADQASwA7ADwARQA1ADYATAA8AD0ARgA2ADcATgBNAD0ARwA3ADgATwBOAD4ALgATABEAJAAmABsAJwAPAA0AJgApAB0AKwARAA8AKQAsAB8ALAAoAAEAKgAoAEEALwAiAAkALQAvAAcAMAAVABMAKgAtAAUAIQAXABUAIwALAAkAJAAZABcAKwBJAEoABAAAAAIABgAEAAMACAAGAAUACAAAAAYACgAIAAcACgAAAAgACgAJAAsADAAAAAoADAALAA0ADgAAAAwADgANAA8AEAAAAA4AEAAPABEAEgAAABAAEgARABMAFAAAABIAFAATABUAFgAAABQAFgAVABcAGAAAABYAGAAXABkAGgAAABgAHAAaABkAHAAAABoAHgAcABsAHgAAABwAIAAeAB0AIAAAAB4AAgAgAB8AAgAAACAAKAAqAAMANgA+ADoAAQADAAQASwAuAEoAJQALACMATAAwAEsATQAhAEwATgAkAE0AKQBOAE8ALABPAFAAQgAxADIALQBCAEMARQAvAEQARgAiAEUARwAjAEYASAAlAEcAJwBJACsAKABQAEEAQwAvAC0AQQBAADEAUAA/AEAASAA5AEkASQA6AEoASgA7AEsARAAzADQAQwAyADMARQA0ADUASwA8AEwARQA2AEYATAA9AE0ARgA3AEcATgA9AD4ARwA4AEgATwA+AD8ALgARACsAJAAbABkAJwANACUAJgAdABsAKwAPACcAKQAfAB0ALAABAB8AKgBBAEIALwAJAAcALQAHAAUAMAATAC4AKgAFAAMAIQAVADAAIwAJACIAJAAXACEAKwBKAC4ABgADAAUACAAFAAcACgAHAAkACgALAAwADAANAA4ADgAPABAAEAARABIAEgATABQAFAAVABYAFgAXABgAGAAZABoAHAAZABsAHgAbAB0AIAAdAB8AAgAfAAEAKAADAAEANgA4ADcAOAA6ADkAOgA+ADsAOwA+ADwAPAA+AD0APgBAAD8AQAAyADEAMgA0ADMANAA2ADUANgA6ADgAPgAyAEAAMgA+ADQANAA+ADYAAQAEAAIA"),
"lods": [0.00081954, PackedByteArray("KgAsAEAAKgBAADEAKgAxADIAKgAyADMALAAqAAUALwAqADMAKgAvAAUALwAzADQALwA0ADUALwA1ADYALAAFAB8ALwA2ACMALwAjAAUAIwA2ADcAHwAFAAQABAAgAB8ACgAEAAUACgAFACMAIwA3ADgACgAjAA0ACgANABIAIwA4ACcAJwANACMAJwA4ADkAKwANACcAJwA5ACsAEgANACsAKwA5ADoAEgArABkAKwA6ADAAMAAZACsAMAA6ADsAMAA7ADwAEgAZABwAMAA8ACEAIQAZADAAIQA8AD0AHAAZAB8AIAAcAB8AIQApABkAKQAhAD0AKQAfABkAKQA9AD4AKQAsAB8AKQA+AD8ALAApAD8ALAA/AEAACgASAAQABAASACAAIAASABwANgA+ADoAOgA+ADsANgA6ADgAOAA6ADkANgA4ADcAOwA+ADwAPAA+AD0ANAA+ADYANAA2ADUAMgA+ADQAMgA0ADMAPgAyAEAAQAAyADEAPgBAAD8A"), 0.00150667, PackedByteArray("LwAsAEAALwBAADEALwAxADIALwAyADMALwAzADQALwA0ADYALAAvABIAEgAgACwALwA2ACcAEgAvACcAJwA2ADcAJwA3ADkAJwA5ACEAEgAnACEAIQA5ADsAIQA7AD0AEgAhACwALAAhAD0AIAASACwALAA9AD4ALAA+AD8ALAA/AEAANgA+ADkANgA5ADcAOQA+ADsAOwA+AD0ANAA+ADYAMgA+ADQAMgA0ADMAPgAyAEAAQAAyADEAPgBAAD8A"), 0.002724, PackedByteArray("LwAsAEAALwBAADIALwAyADcALAAvABIAEgAgACwALwA3ACsAEgAvACsAKwA3ADsAEgArACwAKwA7ACwAIAASACwALAA7AD0ALAA9AEAANwA9ADsAMgA9ADcAPQAyAEAA"), 0.00402961, PackedByteArray("GAAyADsALAAyABgALABAADIAGAAgACwALAAYADsAIAAYACwALAA7AEAAOwAyAEAA")],
"name": "bulletmat",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 81,
"vertex_data": PackedByteArray("/n////9/AAD/fzXwaywAAP5/W/2EVgAA+p818MgyAADej1v9rFkAABi7NfDmRAAAU51b/apiAAA2zTXwA2AAAFGmW/0fcAAAktM18P9/AAB6qVv9/38AADbNNfD7nwAAUaZb/d+PAAAYuzXwGLsAAFOdW/1UnQAA+p818DbNAADej1v9UqYAAP9/NfCT0wAA/n9b/XqpAAADYDXwNs0AAB9wW/1SpgAA5UQ18Bi7AACqYlv9VJ0AAMcyNfD7nwAArFlb/d+PAABrLDXw/38AAINWW/3/fwAAxzI18ANgAACsWVv9H3AAAOVENfDmRAAAqmJb/apiAAADYDXwyDIAAB9wW/2sWQAAkSIi3bKmAAAf5SLd/38AAGzdIt2ypgAA3xoi3f9/AACAxyLdgMcAAJEiIt1MWQAAsqYi3WzdAAD/fyLd3xoAAH04It1+OAAAsqYi3ZIiAAD/fyLdH+UAAExZIt2SIgAAgMci3X44AABMWSLdbN0AAGzdIt1MWQAAfTgi3YDHAAD/fwAAAAAAAPuwAAC+CQAAgdoAAH0lAABA9gAAA08AAP//AAD/fwAAQPYAAPuwAACB2gAAgdoAAPuwAABA9gAA/38AAP//AAADTwAAQPYAAH0lAACB2gAAvgkAAPuwAAAAAAAA/38AAL4JAAADTwAAfSUAAH0lAAADTwAAvgkAAP9/BqVkAQAAcrAGpQcLAACF2QaleSYAAPf0BqWMTwAAmv4Gpf9/AAD39AalcrAAAIXZBqWF2QAAcrAGpff0AAD/fwalmv4AAIxPBqX39AAAeSYGpYXZAAAHCwalcrAAAGQBBqX/fwAABwsGpYxPAAB5JgaleSYAAIxPBqUHCwAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_nhgpd"]
resource_name = "bullet1_Cylinder_002"
_surfaces = [{
"aabb": AABB(-0.00374031, -0.00835017, -0.00374033, 0.00748066, 0.0267822, 0.00748066),
"attribute_data": PackedByteArray("eN/anUKxXDJCsWYjAsHamoKlXDKCpWYjecRtj8GZXDLBmWYjDcwxhgGOXDIBjmYjldaQgEGCXDJBgmYjeOJkf4F2XDKBdmYj5e3cgsFqXDLBamYjIPdvigFfXDIBX2Yjwvz3lEFTXDJBU2Yj7f3aoIBHXDKAR2YjdvpIrMA7XDLAO2Yj4vKDtQAwXDIAMGYjWugku0AkXDJAJGYjeNxQvIAYXDKAGGYjCtHYuMAMXDLADGYjz8dFsf8AXDICvVwy/wBmIwK9ZiMuwr2mADAQQ0GCEEOBdhBDQCQQQ8FqEEOAGBBDAV8QQ0KxEEPADBBDgqUQQ0FTEEP/ABBDAr0QQ8GZEEOARxBDAY4QQ8A7EENCsf/+kdz+/svoyv2Cpf/+ovP/98GZ//5t+4DuAY7//v/+veJBgv/+yv2D1oF2//7/963LwWr//oDu4cMBX//+QVP//r3iUMCD1oTBgEf//q3LT8fAO//+4cPP0AAw//5QwJHcQCT//oTBy+iAGP/+T8ei88AM//7P0G37/wD//gK9//5CsQhzgqUIc8GZCHMBjghzQYIIc4F2CHPBaghzAV8Ic0FTCHOARwhzwDsIcwAwCHNAJAhzgBgIc8AMCHP/AAhzAr0Icw=="),
"format": 34896613399,
"index_count": 474,
"index_data": PackedByteArray("bwBDAEEANwATABAAcAAzAEMAcQA2ADMAcgA4ADYAOwA4AHIAPgA7AHMAZgBlAEQAQAA8AGYAaQA0AEIAagA1ADQAawA3ADUAbAA5ADcAOQBsAG0AOgA/AHUAZwBoAEIAZQB1AGQAdABzAGEAbABTAFQAbQBUAFcACQAAAAYAbgBXAFkAaABnAEkAZwBmAEcAaQBoAEsAbwBZAFsAaQBNAE8AcABbAF0AagBPAFEAcgBxAF0AawBRAFMAcwByAF8AQQAcABkANgA4ACgAOQAWABMAOAA7ACsAPQAZABYAOwA+AC4APwA6AAEAPAA6AGUAQgA0AA0AQABCAAoAQwAfABwAPABAAAcAMwAiAB8ANQAQAA0ANgAlACIAPQBtAG4ABgAAAAMACAAFAAQACwAIAAcADAAAAAkADgALAAoADwAAAAwADgANABAAEgAAAA8AEQAQABMAFQAAABIAFAATABYAGAAAABUAFwAWABkAGwAAABgAGgAZABwAHgAAABsAHQAcAB8AIQAAAB4AIAAfACIAJAAAACEAIwAiACUAJwAAACQAKQAmACUAKgAAACcALAApACgALQAAACoAMAAsACsAMgAAAC0AAgAxAC8AAwAAADIAOgA8AAQATgBeAFYAAQAEAAUAbwBBAG4ANwAQADUAcABDAG8AcQAzAHAAcgA2AHEAOwByAHMAPgBzAHQAZgBEAEcAQABmAGcAaQBCAGgAagA0AGkAawA1AGoAbAA3AGsAOQBtAD0AOgB1AGUAZwBCAEAAZQBkAEQAdABhAGMAbABUAG0AbQBXAG4AbgBZAG8AaABJAEsAZwBHAEkAaQBLAE0AbwBbAHAAaQBPAGoAcABdAHEAagBRAGsAcgBdAF8AawBTAGwAcwBfAGEAQQAZAD0ANgAoACUAOQATADcAOAArACgAPQAWADkAOwAuACsAPwABAC8APABlAGYAQgANAAoAQAAKAAcAQwAcAEEAPAAHAAQAMwAfAEMANQANADQANgAiADMAPQBuAEEACAAEAAcACwAHAAoADgAKAA0ADgAQABEAEQATABQAFAAWABcAFwAZABoAGgAcAB0AHQAfACAAIAAiACMAIwAlACYAKQAlACgALAAoACsAMAArAC4AAgAvAAEAOgAEAAEATgBSAFAAUgBWAFUAVgBeAFgAWABeAFoAWgBeAFwAXgBiAGAAYgBGAEUARgBKAEgASgBOAEwATgBWAFIAXgBGAGIARgBeAEoASgBeAE4AAQAFAAIA"),
"lods": [0.00081954, PackedByteArray("PAA/AGQAPABkAEQAPABEAEcAPABHAEkAPwA8AAcAQgA8AEkAPABCAAcAQgBJAEsAQgBLAE0AQgBNAE8APwAHAC8AQgBPADUAQgA1AAcANQBPAFEALwAHAAUABQAxAC8ADgAFAAcADgAHADUANQBRAFMADgA1ABMADgATABoANQBTADkAOQATADUAOQBTAFQAPQATADkAOQBUAD0AGgATAD0APQBUAFcAGgA9ACUAPQBXAEMAQwAlAD0AQwBXAFkAQwBZAFsAGgAlACkAQwBbADMAMwAlAEMAMwBbAF0AKQAlAC4AMAApAC4AMwA7ACUAOwAzAF0AOwAuACUAOwBdAF8AOwA+AC4AOwBfAGEAPgA7AGEAPgBhAGMADwAbAAYABgAbADIAMgAbACoATgBeAFYAVgBeAFgATgBWAFIAUgBWAFUATgBSAFAAWABeAFoAWgBeAFwASgBeAE4ASgBOAEwARgBeAEoARgBKAEgAXgBGAGIAYgBGAEUAXgBiAGAA"), 0.00150667, PackedByteArray("QgA/AGQAQgBkAEQAQgBEAEcAQgBHAEkAQgBJAEsAQgBLAE8APwBCABoAGgAxAD8AQgBPADkAGgBCADkAOQBPAFEAOQBRAFQAOQBUADMAGgA5ADMAMwBUAFkAMwBZAF0AGgAzAD4APgAzAF0AMAAaAD4APgBdAF8APgBfAGEAPgBhAGMATgBeAFUATgBVAFAAVQBeAFgAWABeAFwASgBeAE4ARgBeAEoARgBKAEgAXgBGAGIAYgBGAEUAXgBiAGAA"), 0.002724, PackedByteArray("QgA/AGQAQgBkAEcAQgBHAFEAPwBCABoAGgAxAD8AQgBRAD0AGgBCAD0APQBRAFkAGgA9AD4APQBZAD4AMAAaAD4APgBZAF0APgBdAGMAUABcAFgARgBcAFAAXABGAGIA"), 0.00402961, PackedByteArray("IwBHAFkAPwBHACMAPwBkAEcAIwAxAD8APgAjAFkAMAAjAD4APgBZAGMAWABGAGIA")],
"material": SubResource("StandardMaterial3D_6buc5"),
"name": "bulletmat",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 118,
"vertex_data": PackedByteArray("/n////9/D9P/fzXwayz///5/W/2EVv///n9b/YRWK+L6nzXwyDJ08N6PW/2sWQDy3o9b/axZZuUYuzXw5kTz4FOdW/2qYiPkU51b/apiRuY2zTXwA2CH0VGmW/0fcJTWUaZb/R9wyOSS0zXw/39GwnqpW/3/f4/Jeqlb/f9/HOE2zTXw+59Zs1GmW/3fj4G9UaZb/d+Pj9sYuzXwGLstpVOdW/1UnSezU51b/VSdodT6nzXwNs0Umd6PW/1SpsSr3o9b/VKmJM3/fzXwk9Nwk/5/W/16qQGp/n9b/XqpVMYDYDXwNs0UmR9wW/1SpsSrH3Bb/VKmsMHlRDXwGLstpapiW/1UnSezqmJb/VSdaMDHMjXw+59Zs6xZW/3fj4G9rFlb/d+PvMJrLDXw/39GwoNWW/3/f4/Jg1Zb/f9/8cfHMjXwA2CH0axZW/0fcJPWrFlb/R9wz87lRDXw5kTz4KpiW/2qYiPkqmJb/apiI9YDYDXwyDKY7wNgNfDIMlnxH3Bb/axZyO4fcFv9rFlK9R9wW/2sWeHckSIi3bKmh7Af5SLd/39awGzdIt2ypoew3xoi3f9/WsCAxyLdgMfZoJEiIt1MWTzQsqYi3WzdtJH/fyLd3xr//304It1+OCXgsqYi3ZIiEfD/fyLdH+Wih0xZIt2SIu3vTFki3ZIiNfCAxyLdfjgl4ExZIt1s3bSRbN0i3UxZPNB9OCLdgMfZoP9/AAAAAP///38AAAAAGMD7sAAAvgkYwPuwAAC+Cf7vgdoAAH0lGMCB2gAAfSX/30D2AAADTxjAQPYAAANP/8///wAA/38YwP//AAD/f/+/QPYAAPuwGMBA9gAA+7D/r4HaAACB2hjAgdoAAIHa/5/7sAAAQPYYwPuwAABA9v+P/38AAP//GID/fwAA//8YwANPAABA9hjAA08AAED2/499JQAAgdoYwH0lAACB2v+fvgkAAPuwGMC+CQAA+7D/rwAAAAD/fxjAAAAAAP9//7++CQAAA08YwL4JAAADT//PfSUAAH0lGMB9JQAAfSX/3wNPAAC+CRjAA08AAL4J/u8DTwAAvgn+7/9/BqVkAf//crAGpQcLAfCF2QaleSYD4Pf0BqWMTwbQmv4Gpf9/CcD39AalcrAPsIXZBqWF2RigcrAGpff0NJD/fwalmv6YgoxPBqX39DSQeSYGpYXZGKAHCwalcrAPsGQBBqX/fwnABwsGpYxPBtB5JgaleSYD4IxPBqUHC/3vjE8GpQcLBfCBrT6p/3/05v9/jNJRtSmw5ZzLBOSycQh5t3epwqCYCQe4aRAGuBWj8aTMDka9ixj2tqyd46nxFBPDiiF4tLmZW7D9HBfKaizcsKaXEboQKYvTEzuKrOSXGMx4P1riCVIOqNya/v//f/7//38dpJ+geL/mswnSpJ17oXeoD6nsxRO7cqy5oNOw/Jyjz2ms57X2odK38ZQb1omh67zjpBO8y44M24qYuMLxqAm9l4k832iQ98d6reO6EYlR4EiABuZgjtTJFIKc0NGxS7aUjqznP5QgClKYlA4fir7rF5/8FfKGpu5Hrpom/38A9WWE+vD1jCYC/v//fzmEhPEEgJj0A49lBJqmttFYkfIG+5Xn4P9/1/+5BXOLuQVziy6ABwC5BXOLN4AQALkFc4tAgBoAugVzi02AJwC5BXOLYYA6ALoFc4uFgF4AuQVzi+qAxAD///9/uQVzi7kFc4vDgBP/uQVzi16Aef+5BXKLOoCd/7kFc4smgLD/uQVzixmAvf+5BXOLD4DH/7kFc4sPgMn//3/W//9/Cvy1hMgAhYWeAXaGlgKrh9YDb4moBZCM4gihlDUR/v//fzWRXevhiG7zp4WP9tWDUviWgoj5nYF5+o2Br/r/f+P7")
}]
shadow_mesh = SubResource("ArrayMesh_soojt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c0d7q"]
albedo_color = Color(0.737255, 0.65098, 0.305882, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.57
emission_enabled = true
emission = Color(0.50936, 0.585836, 1.92523e-07, 1)
refraction_scale = 1.0
detail_blend_mode = 2
proximity_fade_distance = 92.45

[sub_resource type="BoxMesh" id="BoxMesh_7lf3a"]
size = Vector3(0.01, 0.01, 0.01)

[sub_resource type="Curve" id="Curve_ks2w3"]
_limits = [0.0, 2.5, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.248062, 2.5), -5.34775, -5.34775, 0, 0, Vector2(1, 0.646003), 0.0, 0.0, 0, 0]
point_count = 3

[node name="bullet rifle" type="Node3D"]
script = ExtResource("1_c43nw")

[node name="bullet1" type="MeshInstance3D" parent="."]
transform = Transform3D(3.5, 0, 0, 0, -1.5299e-07, 3.5, 0, -3.5, -1.5299e-07, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_6buc5")
mesh = SubResource("ArrayMesh_nhgpd")

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0435479)
material_override = SubResource("StandardMaterial3D_c0d7q")
cast_shadow = 0
emitting = false
amount = 32
lifetime = 0.4
one_shot = true
explosiveness = 0.82
lifetime_randomness = 0.65
mesh = SubResource("BoxMesh_7lf3a")
particle_flag_align_y = true
direction = Vector3(0, 0, 23.315)
gravity = Vector3(0, -3.69, 0)
initial_velocity_min = 1.3
initial_velocity_max = 1.3
radial_accel_min = -5.44
radial_accel_max = 6.8
damping_max = 12.925
scale_amount_curve = SubResource("Curve_ks2w3")

[node name="ray_group" type="Node3D" parent="."]

[node name="RayCast3D" type="RayCast3D" parent="ray_group"]
target_position = Vector3(0, 0, -0.674)
collide_with_areas = true

[node name="bullet sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_7lf3a")
volume_db = -10.0
unit_size = 7.5
autoplay = true

[connection signal="finished" from="CPUParticles3D" to="." method="_on_cpu_particles_3d_finished"]
